--- a/style.css
+++ b/style.css
@@ -1,120 +1,198 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Ubuntu");
-html, body {
-  height: 100%;
-  background: #D3DBF2;
-}
 
-.webpage {
+    
+ul#countdown {
   position: relative;
-  margin: auto;
-  display: block;
-  margin-top: 3%;
-  width: 600px;
-  height: 420px;
-  background: linear-gradient(rgba(38, 38, 43, 0.85), rgba(38, 38, 43, 0.95)), url("https://images.pexels.com/photos/70232/pexels-photo-70232.jpeg?h=350&auto=compress");
-  z-index: 1;
-  -webkit-box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.75);
-}
-
-.right-triangle {
-  position: absolute;
-  bottom: 0%;
-  right: 0%;
-  height: 100%;
+  top: 50%;
+  transform: translateY(-50%);
   width: 50%;
-  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.9)), url("https://images.pexels.com/photos/114907/pexels-photo-114907.jpeg?h=350&auto=compress");
-  -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-  clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  margin-top: 0%;
+  margin-left: 25%;
+  padding: 15px 0 20px 0;
+  color: white;
+  border: 1px solid clear;
+  border-width: 1px 0;
+  overflow: hidden;
+  font-family: 'Arial Narrow', Arial, sans-serif;
+  font-weight: bold;
 }
-
-.red-brand-box {
-  position: absolute;
-  width: 8%;
-  height: 10%;
-  top: 10%;
-  left: 10%;
-  background: #EF4135;
-  z-index: 1;
-}
-
-.white-brand-box {
-  position: absolute;
-  width: 80%;
-  height: 80%;
-  top: 15%;
-  left: 15%;
-  border: solid 6px #ffffff;
-  z-index: 2;
-}
-
-.presents-text {
-  position: absolute;
-  top: 25%;
-  left: 10%;
-  font-family: "Open Sans Condensed";
-  color: #A19E9F;
-  font-size: 16px;
-  font-weight: 300;
-}
-
-.title {
-  position: absolute;
-  top: 25%;
-  left: 10%;
-  font-family: "Ubuntu";
-  font-size: 48px;
-  font-weight: 700;
-  color: #ffffff;
-  text-transform: uppercase;
-}
-
-.cta-button {
-  position: absolute;
+ul#countdown li {
+  margin: 0 -3px 0 0;
+  padding: 0;
+  display: inline-block;
   width: 25%;
-  height: 10%;
-  bottom: 25%;
-  left: 10%;
-  background: #EF4135;
-  border-radius: 0%;
-  border: none;
-  padding: 10;
-  font-family: "Ubuntu";
-  font-size: 16px;
-  font-weight: 700;
-  color: #ffffff;
+  font-size: 72px;
+  font-size: 30px;
+  text-align: center;
+}
+ul#countdown li .label {
+    padding: 10px;
+    margin: 0 0 0 0;
+  color: white;
+  font-size: 18px;
+  font-size: 12px;
   text-transform: uppercase;
 }
 
-@media all and (max-width: 600px) {
-  .webpage {
-    position: relative;
-    margin: auto;
-    display: block;
-    margin-top: 10px;
-    width: 300px;
-    height: 200px;
-    z-index: 1;
-  }
 
-  .white-brand-box {
-    border: solid 3px #ffffff;
-  }
+body{
+	margin:0;
+ background-image: url("https://i.pinimg.com/originals/63/b4/ad/63b4ad20b65b180d42251940055d848a.jpg");
 
-  .presents-text {
-    font-size: 8px;
-  }
+	font:600 16px/18px 'Open Sans',sans-serif;
+}
+*,:after,:before{box-sizing:border-box}
+.clearfix:after,.clearfix:before{content:'';display:table}
+.clearfix:after{clear:both;display:block}
+a{color:inherit;text-decoration:none}
 
-  .title {
-    font-size: 24px;
-  }
+.login-wrap{
+	width:100%;
+	margin:auto;
+	max-width:525px;
+	min-height:670px;
+	position:relative;
+	background:url(https://www.brinknews.com/wp-content/uploads/2020/04/GettyImages-1206129017.jpg) no-repeat center;
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+}
+.login-html{
+	width:100%;
+	height:100%;
+	position:absolute;
+	padding:90px 70px 50px 70px;
+	background:rgba(40,57,101,.9);
+}
+.login-html .sign-in-htm,
+.login-html .sign-up-htm{
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	position:absolute;
+	-webkit-transform:rotateY(180deg);
+	        transform:rotateY(180deg);
+	-webkit-backface-visibility:hidden;
+	        backface-visibility:hidden;
+	-webkit-transition:all .4s linear;
+	transition:all .4s linear;
+}
+.login-html .sign-in,
+.login-html .sign-up,
+.login-form .group .check{
+	display:none;
+}
+.login-html .tab,
+.login-form .group .label,
+.login-form .group .button{
+	text-transform:uppercase;
+}
+.login-html .tab{
+	font-size:22px;
+	margin-right:15px;
+	padding-bottom:5px;
+	margin:0 15px 10px 0;
+	display:inline-block;
+	border-bottom:2px solid transparent;
+}
+.login-html .sign-in:checked + .tab,
+.login-html .sign-up:checked + .tab{
+	color:#fff;
+	border-color:#1161ee;
+}
+.login-form{
+	min-height:345px;
+	position:relative;
+	-webkit-perspective:1000px;
+	        perspective:1000px;
+	-webkit-transform-style:preserve-3d;
+	        transform-style:preserve-3d;
+}
+.login-form .group{
+	margin-bottom:15px;
+}
+.login-form .group .label,
+.login-form .group .input,
+.login-form .group .button{
+	width:100%;
+	color:black;
+	display:block;
+}
+.login-form .group .input,
+.login-form .group .button{
+	border:none;
+	padding:15px 20px;
+	border-radius:25px;
+	background:white;
+}
+.login-form .group input[data-type="password"]{
+	text-security:circle;
+	-webkit-text-security:circle;
+}
+.login-form .group .label{
+	color:white;
+	font-size:12px;
+}
+.login-form .group .button{
+	background:#1161ee;
+}
+.login-form .group label .icon{
+	width:15px;
+	height:15px;
+	border-radius:2px;
+	position:relative;
+	display:inline-block;
+	background:rgba(255,255,255,.1);
+}
+.login-form .group label .icon:before,
+.login-form .group label .icon:after{
+	content:'';
+	width:10px;
+	height:2px;
+	background:#fff;
+	position:absolute;
+	-webkit-transition:all .2s ease-in-out 0s;
+	transition:all .2s ease-in-out 0s;
+}
+.login-form .group label .icon:before{
+	left:3px;
+	width:5px;
+	bottom:6px;
+	-webkit-transform:scale(0) rotate(0);
+	        transform:scale(0) rotate(0);
+}
+.login-form .group label .icon:after{
+	top:6px;
+	right:0;
+	-webkit-transform:scale(0) rotate(0);
+	        transform:scale(0) rotate(0);
+}
+.login-form .group .check:checked + label{
+	color:#fff;
+}
+.login-form .group .check:checked + label .icon{
+	background:#1161ee;
+}
+.login-form .group .check:checked + label .icon:before{
+	-webkit-transform:scale(1) rotate(45deg);
+	        transform:scale(1) rotate(45deg);
+}
+.login-form .group .check:checked + label .icon:after{
+	-webkit-transform:scale(1) rotate(-45deg);
+	        transform:scale(1) rotate(-45deg);
+}
+.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{
+	-webkit-transform:rotate(0);
+	        transform:rotate(0);
+}
+.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{
+	-webkit-transform:rotate(0);
+	        transform:rotate(0);
+}
 
-  .cta-button {
-    font-size: 6px;
-  }
-
-  .branding-logo {
-    border: solid 3px #ffffff;
-  }
+.hr{
+	height:2px;
+	margin:60px 0 50px 0;
+	background:rgba(255,255,255,.2);
+}
+.foot-lnk{
+	text-align:center;
 }
